tests/rosetta/out/Rust/catalan-numbers-1.rs
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
fn main() {
    fn binom(n: i32, k: i32) -> i32 {
        if k < 0 || k > n {
            return 0;
        }
        let mut kk = k;
        if kk > n - kk {
            kk = n - kk;
        }
        let mut res = 1;
        let mut i = 0;
        while i < kk {
            res = (res * (n - i));
            i += 1;
            res = ((res as f64) / (i as f64)).parse::<i32>().unwrap();
        }
        return res;
    }
    fn catalan(n: i32) -> i32 {
        return ((binom(2 * n, n) as f64) / ((n + 1) as f64)).parse::<i32>().unwrap();
    }
    fn main() -> () {
        for i in 0..15 {
            println!("{}", vec![format!("{}", catalan(i).to_string())].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
        }
    }
    main();
}
